--- a/assignment/index.html
+++ b/assignment/index.html
@@ -4,9 +4,18 @@
     <meta charset="utf-8">
     <title>Week 4 Assignment</title>
     <!-- Create and link a CSS file! -->
+    <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
+    <header>
     <h1>Week 4 Assignment - Part 2</h1>
     <p>Check console for errors.</p>
+  </header>
+  <div class="info">
+      <h2>My name is Duncan</h2>
+  </div>
+  <img src="https://hips.hearstapps.com/autoweek/assets/s3fs-public/121039986.jpg" alt="Kia Soul"></img>
+  <h3>This is my girlfriend's car. <br>
+  </br>It's a Kia Soul, but she calls it "Orc".</h3>
   </body>
 </html>
